# ATLAS

./: .gitignore  CHANGELOG.md  CHARTER.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  DEPLOY_REPORT.md  LICENSE  LICENSE-DOCS  NOTICE  README.md  REPRODUCIBILITY.md  atlas-corpus.json
.github/workflows/: ci.yml
crates/atlas-api/: Cargo.toml
crates/atlas-api/src/: handler.rs  lib.rs  server.rs  types.rs
crates/atlas-astra/: Cargo.toml
crates/atlas-astra/src/: lib.rs
crates/atlas-bayes/: Cargo.toml
crates/atlas-bayes/src/: lib.rs
crates/atlas-bridge/: Cargo.toml
crates/atlas-bridge/src/: lib.rs
crates/atlas-causal/: Cargo.toml
crates/atlas-causal/src/: lib.rs
crates/atlas-cli/: Cargo.toml  main.rs
crates/atlas-cli/src/: main.rs
crates/atlas-cli/tests/: integration.rs
crates/atlas-core/: Cargo.toml
crates/atlas-core/src/: bench.rs  lib.rs
crates/atlas-corpus/: Cargo.toml
crates/atlas-corpus/src/: deep_supervision.rs  invasion_fitness.rs  lib.rs  train.rs
crates/atlas-grad/: Cargo.toml
crates/atlas-grad/src/: lib.rs
crates/atlas-grad/tests/: stage1_integration.rs
crates/atlas-http/: Cargo.toml
crates/atlas-http/src/: lib.rs
crates/atlas-infer/: Cargo.toml
crates/atlas-infer/src/: engine.rs  hook.rs  lib.rs  streaming.rs
crates/atlas-json/: Cargo.toml
crates/atlas-json/src/: lib.rs
crates/atlas-json/tests/: benchmarks.rs
crates/atlas-mcp/: Cargo.toml
crates/atlas-mcp/src/: lib.rs  protocol.rs  server.rs  tools.rs
crates/atlas-model/: Cargo.toml
crates/atlas-model/src/: lib.rs
crates/atlas-optim/: Cargo.toml
crates/atlas-optim/src/: lib.rs
crates/atlas-palace/: Cargo.toml
crates/atlas-palace/src/: agents.rs  inference.rs  kg.rs  lib.rs  pathfinding.rs  persistence.rs  search.rs  stigmergy.rs  types.rs  util.rs
crates/atlas-palace/tests/: benchmarks.rs
crates/atlas-quant/: Cargo.toml
crates/atlas-quant/src/: lib.rs  lora.rs
crates/atlas-safety/: Cargo.toml
crates/atlas-safety/src/: lib.rs
crates/atlas-tensor/: Cargo.toml  build.rs
crates/atlas-tensor/src/: lib.rs
crates/atlas-tokenize/: Cargo.toml
crates/atlas-tokenize/src/: lib.rs
crates/atlas-trm/: Cargo.toml
crates/atlas-trm/src/: lib.rs
crates/atlas-zk/: Cargo.toml
crates/atlas-zk/src/: lib.rs
crates/atlas-zk/tests/: benchmarks.rs
docs/dashboard/: index.html
kernels/: attention.cu  matmul.cu  quant.cu
scripts/: setup.sh
