[package]
name        = "atlas-bayes"
description = "ATLAS bayes: Bayesian confidence scoring, P(H|E) updates"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
atlas-core = { path = "../atlas-core" }
