[package]
name        = "atlas-cli"
description = "ATLAS CLI: train, discover, eval, prove — zero-dep arg parsing"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
atlas-core   = { path = "../atlas-core" }
atlas-model  = { path = "../atlas-model" }
atlas-astra  = { path = "../atlas-astra" }
atlas-corpus = { path = "../atlas-corpus" }
atlas-palace = { path = "../atlas-palace" }
atlas-zk     = { path = "../atlas-zk" }
