[package]
name        = "atlas-core"
description = "ATLAS core: error types, traits, config primitives"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

# Zero external dependencies — intentional.
[dependencies]
