[package]
name        = "atlas-http"
description = "ATLAS http: HTTP client via raw libc syscalls: NASA/WHO/World Bank APIs"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
atlas-core = { path = "../atlas-core" }
