[package]
name        = "atlas-infer"
description = "ATLAS infer: StigmergicHook trait, InferEngine facade — zero external deps"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
atlas-core     = { path = "../atlas-core" }
atlas-model    = { path = "../atlas-model" }
atlas-tensor   = { path = "../atlas-tensor" }
atlas-tokenize = { path = "../atlas-tokenize" }
