[package]
name        = "atlas-optim"
description = "ATLAS optim: AdamW optimizer, cosine LR scheduler"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
atlas-core = { path = "../atlas-core" }
atlas-tensor = { path = "../atlas-tensor" }
atlas-grad   = { path = "../atlas-grad" }
