[package]
name        = "atlas-palace"
description = "ATLAS palace: GraphPalace stigmergic memory: pheromone deposit/decay, semantic search, 36 methods"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
atlas-core   = { path = "../atlas-core" }
atlas-tensor = { path = "../atlas-tensor" }
