[package]
name        = "atlas-tokenize"
description = "ATLAS tokenize: BPE tokenizer: encode/decode, vocabulary management"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
atlas-core = { path = "../atlas-core" }
