[package]
name        = "atlas-trm"
description = "ATLAS trm: TRM-CausalValidator: 7M-param recursive validator, z=net(x,y,z)×6"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
atlas-core = { path = "../atlas-core" }
